# personal_utils

./: cloud_band_removal.ipynb
temporal/: .dockerignore  .env  .gitignore  Dockerfile  README.md  activities copy 2.py  activities copy 3.py  activities copy.py  activities.py  bitbucket-pipelines.yml  docker-compose.temporal.yaml  mayank_bitbucket-pipelines.yml  pipeline.yaml  pyproject.toml  requirements copy.txt  requirements.txt  run_full_pipeline.py  run_one_product copy 2.py  run_one_product copy.py  run_one_product.py  sentinel_pipeline_serial.py  sentinel_utils.py  start_workflow.py  test_pipeline_locally.ps1  test_pipeline_locally.sh  together.py  worker copy.py  worker.py  workflows copy 2.py  workflows copy.py  workflows.py
temporal/config/: config.yaml  files.yaml
temporal/data/: aoi_cruz.geojson  aoi_merredin_10km.geojson  aoi_miling_10km.geojson
temporal/env/dev/: values.yaml
temporal/models/: rf_model_K.joblib  rf_model_N.joblib  rf_model_P.joblib
